--- a/week-1/7-css-box/styles.css
+++ b/week-1/7-css-box/styles.css
@@ -4,3 +4,10 @@
   border-radius: 4px;
   background: #fff;
 }
+/* * { 
+  border: 1px solid red; 
+} */
+.country {
+  margin: 2px;
+  padding: auto;
+}
