completed 6-css-preoperties fixed exercise

--- a/week-1/6-css-properties/styles.css
+++ b/week-1/6-css-properties/styles.css
@@ -14,6 +14,6 @@ a {
 .message--unread {
   border-left: 2px solid blue;
 }
-.message:has(.message__time--old) {
+.messages > .message:first-child {
   opacity: 0.5;
 }
