--- a/week-2/16-more-flexbox/flexbox.css
+++ b/week-2/16-more-flexbox/flexbox.css
@@ -3,3 +3,44 @@
 }
 
 /* Add your own CSS code below */
+.countries--first {
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.countries--second {
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.countries--third {
+  align-items: flex-start;
+  justify-content: center;
+}
+.countries--third .country--brazil {
+  align-self: flex-end;
+}
+
+.countries--fourth {
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.countries--fourth .country--laos,
+.countries--fourth .country--ethiopia {
+  align-self: center;
+}
+
+.countries--fifth {
+  flex-direction: column-reverse;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+.countries--fifth .country--laos {
+  order: 2;
+}
+
+.countries--fifth .country--uganda {
+  align-self: center;
+}
